--- a/assets/fonts.css
+++ b/assets/fonts.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@450&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap');
+
 body {
-    font-family : sans-serif;
+    font-family : 'Open Sans', sans-serif;
 }
