--- a/assets/style.css
+++ b/assets/style.css
@@ -2,7 +2,7 @@
 .dash-table-container 
 .dash-spreadsheet-container 
 .dash-spreadsheet-inner th {
-	background-color: #964b4b;
+	background-color: #964b4b !important;
     color: white
 }
 
